one commit cause i don't bother doing more

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="calculator-wrapper">
         <div class="calculator">
             <div class="display">
-                <input type="text" id="display">
+                <input type="text" id="display" disabled>
             </div>
             <div class="clear">
-                <button class="btn" id="clear">Clear</button>
+                <button class="btn" id="btn-clear">Clear</button>
             </div>
             <div class="buttons">
                 <button class="btn" id="btn-1">1</button>
@@ -29,6 +29,7 @@
                 <button class="btn" id="btn-7">7</button>
                 <button class="btn" id="btn-8">8</button>
                 <button class="btn" id="btn-9">9</button>
+                <button class="btn" id="btn-0">0</button>
             </div>
             <div class="operators">
                 <button class="btn" id="btn-add">+</button>
