added . button and handling operands with single point

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <button class="btn" id="btn-8">8</button>
                 <button class="btn" id="btn-9">9</button>
                 <button class="btn" id="btn-0">0</button>
+                <button class="btn" id="btn-float">.</button>
             </div>
             <div class="operators">
                 <button class="btn" id="btn-add">+</button>
