added cancel button

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <button class="btn" id="btn-multiplay">x</button>
                 <button class="btn" id="btn-divide">:</button>
                 <button class="btn" id="btn-equals">=</button>
+                <button class="btn" id="btn-del"><</button>
             </div>
         </div>
     </div>
